add sublime text setting

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -184,7 +184,7 @@ bind -n C-o select-pane -t :.+
 ######################################################################
 # マウス操作を有効にする
 setw -g mouse on
-# set -g mouse-select-pane on
-# set -g mouse-resize-pane on
-# set -g mouse-select-window on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
 
