fix some bugs in Ubuntu.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -102,7 +102,10 @@ bind -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
 bind p paste-buffer
 
 # vim <=> tmux 間でクリップボード利用を可能にする
-set -g default-command "reattach-to-user-namespace -l $SHELL"
+# Mac OS
+# set -g default-command "reattach-to-user-namespace -l $SHELL"
+# Ubuntu
+set-option -g default-command ""
 
 # Esc キーでコピーの反転を解除（コピーモードは抜けない）
 bind -t vi-copy Escape clear-selection
