update for copy operatoin in Ubuntu terminal.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -87,25 +87,31 @@ unbind C-b
 # キー操作
 ######################################################################
 # Vi キーバインド
-set -g mode-keys vi
+setw -g mode-keys vi
 
 # Prefix+v でコピーモード開始
 bind v copy-mode \; display "Copy mode!"
 bind -t vi-copy v begin-selection
 
 # Prefix+Enter/y でコピー
-bind -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
+# for Mac
+if-shell "which pbcopy" '
+  # bind -t vi-copy enter copy-pipe "reattach-to-user-namespace pbcopy"
+  # bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy" '
+# for Ubuntu
+ if-shell "which xsel" '
+ '
 
-# Prefix+p でペースト
-# クリップボードにも保存されているので Cmd-v でもペースト可能
+# Prefix+p でペースト (クリップボードにも保存されているので Cmd-v でもペースト可能)
 bind p paste-buffer
 
 # vim <=> tmux 間でクリップボード利用を可能にする
-# Mac OS
-# set -g default-command "reattach-to-user-namespace -l $SHELL"
-# Ubuntu
-set-option -g default-command ""
+# for Mac
+if-shell "which pbcopy" '
+  set -g default-command "reattach-to-user-namespace -l $SHELL" '
+# for Ubuntu
+ if-shell "which xsel" '
+  set -g default-command "" '
 
 # Esc キーでコピーの反転を解除（コピーモードは抜けない）
 bind -t vi-copy Escape clear-selection
@@ -183,11 +189,15 @@ bind -n C-o select-pane -t :.+
 
 
 ######################################################################
-# その他
+# マウス操作
 ######################################################################
 # マウス操作を有効にする
-setw -g mouse on
+# setw -g mouse on
+set -g mode-mouse on
+# ペインの選択
 set -g mouse-select-pane on
+# ペインのサイズを変更
 set -g mouse-resize-pane on
+# ウィンドウを選択
 set -g mouse-select-window on
 
