--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,8 +14,8 @@ set -g status-left '#H:[#P]'
 
 # 右パネルを設定する
 # Wi-Fi、バッテリー残量、現在時刻（最右に表示）
-set -g status-right '#(battery.sh --tmux) [%Y-%m-%d(%a) %H:%M]'
-#(getwifi.sh)
+set -g status-right '#(bin/battery.sh --tmux) [%Y-%m-%d(%a) %H:%M]'
+# (getwifi.sh)
 
 # ステータスバーを Utf-8 に対応
 set -g status-utf8 on
@@ -95,23 +95,19 @@ bind -t vi-copy v begin-selection
 
 # Prefix+Enter/y でコピー
 # for Mac
-if-shell "which pbcopy" '
-  # bind -t vi-copy enter copy-pipe "reattach-to-user-namespace pbcopy"
-  # bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy" '
+bind -t vi-copy enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # for Ubuntu
- if-shell "which xsel" '
- '
+###
 
 # Prefix+p でペースト (クリップボードにも保存されているので Cmd-v でもペースト可能)
 bind p paste-buffer
 
 # vim <=> tmux 間でクリップボード利用を可能にする
 # for Mac
-if-shell "which pbcopy" '
-  set -g default-command "reattach-to-user-namespace -l $SHELL" '
+set -g default-command "reattach-to-user-namespace -l $SHELL"
 # for Ubuntu
- if-shell "which xsel" '
-  set -g default-command "" '
+# set -g default-command ""
 
 # Esc キーでコピーの反転を解除（コピーモードは抜けない）
 bind -t vi-copy Escape clear-selection
@@ -191,13 +187,9 @@ bind -n C-o select-pane -t :.+
 ######################################################################
 # マウス操作
 ######################################################################
-# マウス操作を有効にする
-# setw -g mouse on
-set -g mode-mouse on
-# ペインの選択
-set -g mouse-select-pane on
-# ペインのサイズを変更
-set -g mouse-resize-pane on
-# ウィンドウを選択
-set -g mouse-select-window on
-
+setw -g mouse on
+# set -g mode-mouse on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
+# set -g mouse-select-window on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
