--- a/.tmux.conf
+++ b/.tmux.conf
@@ -98,16 +98,18 @@ bind -t vi-copy v begin-selection
 bind -t vi-copy enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # for Ubuntu
-###
+#set-option -g default-shell /bin/<span class="searchword">zsh</span>
+#setw -g mode-keys vi
+#bind-key -t vi-copy Enter copy-pipe "cat | xsel -i --clipboard"
 
 # Prefix+p でペースト (クリップボードにも保存されているので Cmd-v でもペースト可能)
 bind p paste-buffer
 
 # vim <=> tmux 間でクリップボード利用を可能にする
 # for Mac
-set -g default-command "reattach-to-user-namespace -l $SHELL"
+# set -g default-command "reattach-to-user-namespace -l $SHELL"
 # for Ubuntu
-# set -g default-command ""
+set -g default-command ""
 
 # Esc キーでコピーの反転を解除（コピーモードは抜けない）
 bind -t vi-copy Escape clear-selection
