--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,21 +95,24 @@ bind -t vi-copy v begin-selection
 
 # Prefix+Enter/y でコピー
 # for Mac
+set-option -g default-shell /usr/local/bin/<span class="searchword">zsh</span>
 bind -t vi-copy enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-# for Ubuntu
-#set-option -g default-shell /bin/<span class="searchword">zsh</span>
-#setw -g mode-keys vi
-#bind-key -t vi-copy Enter copy-pipe "cat | xsel -i --clipboard"
+### for Ubuntu
+# set-option -g default-shell /bin/<span class="searchword">zsh</span>
+# setw -g mode-keys vi
+# bind-key -t vi-copy Enter copy-pipe "cat | xsel -i --clipboard"
+# TODO: change automatically
 
 # Prefix+p でペースト (クリップボードにも保存されているので Cmd-v でもペースト可能)
 bind p paste-buffer
 
 # vim <=> tmux 間でクリップボード利用を可能にする
-# for Mac
-# set -g default-command "reattach-to-user-namespace -l $SHELL"
-# for Ubuntu
-set -g default-command ""
+### for Mac
+set -g default-command "reattach-to-user-namespace -l $SHELL"
+### for Ubuntu
+# set -g default-command ""
+# TODO: change automatically
 
 # Esc キーでコピーの反転を解除（コピーモードは抜けない）
 bind -t vi-copy Escape clear-selection
