--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,9 +79,8 @@ set -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
 # プレフィックスキーの変更
 ######################################################################
 set -g prefix C-z
-bind C-z send-prefix
-unbind C-b
-
+bind-key C-z send-prefix
+unbind-key C-b
 
 ######################################################################
 # キー操作
@@ -90,22 +89,22 @@ unbind C-b
 setw -g mode-keys vi
 
 # Prefix+v でコピーモード開始
-bind v copy-mode \; display "Copy mode!"
-bind -t vi-copy v begin-selection
+bind-key v copy-mode \; display "Copy mode!"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 # Prefix+Enter/y でコピー
 # for Mac
-set-option -g default-shell /usr/local/bin/<span class="searchword">zsh</span>
-bind -t vi-copy enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+set-option -g default-shell /usr/local/bin/zsh
+bind-key -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 ### for Ubuntu
 # set-option -g default-shell /bin/<span class="searchword">zsh</span>
 # setw -g mode-keys vi
-# bind-key -t vi-copy Enter copy-pipe "cat | xsel -i --clipboard"
+# bind-key -T copy-mode-vi Enter copy-pipe-and-cancel "cat | xsel -i --clipboard"
 # TODO: change automatically
 
 # Prefix+p でペースト (クリップボードにも保存されているので Cmd-v でもペースト可能)
-bind p paste-buffer
+bind-key p paste-buffer
 
 # vim <=> tmux 間でクリップボード利用を可能にする
 ### for Mac
@@ -115,44 +114,44 @@ set -g default-command "reattach-to-user-namespace -l $SHELL"
 # TODO: change automatically
 
 # Esc キーでコピーの反転を解除（コピーモードは抜けない）
-bind -t vi-copy Escape clear-selection
+bind-key -T copy-mode-vi Escape send-keys -X clear-selection
 # Ctrl-c キーでコピーの反転を解除し、コピーモードから抜ける
-bind -t vi-copy C-c cancel
+bind-key -T copy-mode-vi C-c send-keys -X cancel
 
 # コピーモード中（Prefix+v 後）C-v で矩形選択開始
-bind -t vi-copy C-v rectangle-toggle
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # 1行選択
-bind -t vi-copy V select-line
+bind-key -T copy-mode-vi V send-keys -X select-line
 
 # Vi モード中に Ctrl-a で行頭に（Emacs ライク）
-bind -t vi-copy C-a start-of-line
+bind-key -T copy-mode-vi C-a send-keys -X start-of-line
 # Vi モード中に Ctrl-e で行末に（Emacs ライク）
-bind -t vi-copy C-e end-of-line
+bind-key -T copy-mode-vi C-e send-keys -X end-of-line
 
 # 単語の最初の1文字に移動
-bind -t vi-copy w next-word
+bind-key -T copy-mode-vi w send-keys -X next-word
 # 単語の最後の1文字に移動
-bind -t vi-copy e next-word-end
+bind-key -T copy-mode-vi e send-keys -X next-word-end
 # w の逆の動き back
-bind -t vi-copy b previous-word
+bind-key -T copy-mode-vi b send-keys -X previous-word
 
 # 画面上に映る最上行に移動
-bind -t vi-copy g top-line
+bind-key -T copy-mode-vi g send-keys -X top-line
 # 画面上に映る最下行に移動
-bind -t vi-copy G bottom-line
+bind-key -T copy-mode-vi G send-keys -X bottom-line
 
 # 前方検索
-bind -t vi-copy / search-forward
+bind-key -T copy-mode-vi / send-keys -X search-forward
 # 後方検索
-bind -t vi-copy ? search-backward
+bind-key -T copy-mode-vi ? send-keys -X search-backward
 
 # ページスクロール
-bind -t vi-copy C-n page-up
-bind -t vi-copy C-f page-down
+bind-key -T copy-mode-vi C-n send-keys -X page-up
+bind-key -T copy-mode-vi C-f send-keys -X page-down
 
 # ページ送り
-bind -t vi-copy C-u scroll-up
-bind -t vi-copy C-d scroll-down
+bind-key -T copy-mode-vi C-u send-keys -X scroll-up
+bind-key -T copy-mode-vi C-d send-keys -X scroll-down
 
 
 ######################################################################
@@ -163,38 +162,38 @@ set -g base-index 1
 set -g pane-base-index 1
 
 # Prefix+- で横に、Prefix+| で縦に分割（ペイン）する
-bind | split-window -h
-bind - split-window -v
+bind-key | split-window -h
+bind-key - split-window -v
 
 # Prefix + Ctrl-h/l でウィンドウ切り替え
 # Prefix + Ctrl-h,h,h,h,...と連打できる
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
 
 # Prefix+hjkl でペイン移動
-bind -n S-left select-pane -L
-bind -n S-down select-pane -D
-bind -n S-up select-pane -U
-bind -n S-right select-pane -R
+bind-key -n S-left select-pane -L
+bind-key -n S-down select-pane -D
+bind-key -n S-up select-pane -U
+bind-key -n S-right select-pane -R
 
 # ペインサイズを上下左右（Prefix+JKHL）に変更
 # Prefix+J,J,J,J,...と連打してリサイズ可能
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
 
 # Ctrl-o でペインをローテーションしながら移動
 # Prefix を用いないのでタイプが楽だが、Ctrl-o を使用してしまう他のソフトウェアの設定に支障をきたさないように注意
-bind -n C-o select-pane -t :.+
+bind-key -n C-o select-pane -t :.+
 
 
 ######################################################################
 # マウス操作
 ######################################################################
 setw -g mouse on
-# set -g mode-mouse on
-# set -g mouse-select-pane on
-# set -g mouse-resize-pane on
-# set -g mouse-select-window on
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+set -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+bind-key -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
