Fix bugs in tmux<2.4

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -90,68 +90,120 @@ setw -g mode-keys vi
 
 # Prefix+v でコピーモード開始
 bind-key v copy-mode \; display "Copy mode!"
-bind-key -T copy-mode-vi v send-keys -X begin-selection
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy v begin-selection'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi v send-keys -X begin-selection'
 
 # Prefix+Enter/y でコピー
-# for Mac
-set-option -g default-shell /usr/local/bin/zsh
-bind-key -T copy-mode-vi y     send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+### for Mac
+if-shell "uname | grep -q Darwin" \
+    'set-option -g default-shell /usr/local/bin/zsh'  \
+    'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'  \
+    'bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
 ### for Ubuntu
-# set-option -g default-shell /bin/<span class="searchword">zsh</span>
-# setw -g mode-keys vi
-# bind-key -T copy-mode-vi Enter copy-pipe-and-cancel "cat | xsel -i --clipboard"
-# TODO: change automatically
+if-shell "uname | grep -q Linux" \
+    'set-option -g default-shell /bin/<span class="searchword">zsh</span>' \
+    'setw -g mode-keys vi' \
+    'bind-key -t vi-copy Enter copy-pipe-and-cancel "cat | xsel -i --clipboard"'
 
 # Prefix+p でペースト (クリップボードにも保存されているので Cmd-v でもペースト可能)
 bind-key p paste-buffer
 
 # vim <=> tmux 間でクリップボード利用を可能にする
 ### for Mac
-set -g default-command "reattach-to-user-namespace -l $SHELL"
+if-shell "uname | grep -q Darwin" \
+    'set -g default-command "reattach-to-user-namespace -l $SHELL"'
 ### for Ubuntu
-# set -g default-command ""
-# TODO: change automatically
+if-shell "uname | grep -q Linux" \
+    'set -g default-command ""'
 
 # Esc キーでコピーの反転を解除（コピーモードは抜けない）
-bind-key -T copy-mode-vi Escape send-keys -X clear-selection
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy Escape clear-selection'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi Escape send-keys -X clear-selection'
 # Ctrl-c キーでコピーの反転を解除し、コピーモードから抜ける
-bind-key -T copy-mode-vi C-c send-keys -X cancel
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy C-c cancel'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi C-c send-keys -X cancel'
 
 # コピーモード中（Prefix+v 後）C-v で矩形選択開始
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy C-v rectangle-toggle'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle'
 # 1行選択
-bind-key -T copy-mode-vi V send-keys -X select-line
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy V select-line'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi V send-keys -X select-line'
 
 # Vi モード中に Ctrl-a で行頭に（Emacs ライク）
-bind-key -T copy-mode-vi C-a send-keys -X start-of-line
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy C-a start-of-line'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi C-a send-keys -X start-of-line'
 # Vi モード中に Ctrl-e で行末に（Emacs ライク）
-bind-key -T copy-mode-vi C-e send-keys -X end-of-line
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy C-e end-of-line'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi C-e send-keys -X end-of-line'
 
 # 単語の最初の1文字に移動
-bind-key -T copy-mode-vi w send-keys -X next-word
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy w next-word'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi w send-keys -X next-word'
 # 単語の最後の1文字に移動
-bind-key -T copy-mode-vi e send-keys -X next-word-end
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy e next-word-end'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi e send-keys -X next-word-end'
 # w の逆の動き back
-bind-key -T copy-mode-vi b send-keys -X previous-word
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy b previous-word'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi b send-keys -X previous-word'
 
 # 画面上に映る最上行に移動
-bind-key -T copy-mode-vi g send-keys -X top-line
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy g top-line'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi g send-keys -X top-line'
 # 画面上に映る最下行に移動
-bind-key -T copy-mode-vi G send-keys -X bottom-line
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy G bottom-line'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi G send-keys -X bottom-line'
 
 # 前方検索
-bind-key -T copy-mode-vi / send-keys -X search-forward
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy / search-forward'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi / send-keys -X search-forward'
 # 後方検索
-bind-key -T copy-mode-vi ? send-keys -X search-backward
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy ? search-backward'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi ? send-keys -X search-backward'
 
 # ページスクロール
-bind-key -T copy-mode-vi C-n send-keys -X page-up
-bind-key -T copy-mode-vi C-f send-keys -X page-down
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy C-n page-up'  \
+    'bind-key -t vi-copy C-f page-down'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi C-n send-keys -X page-up'  \
+    'bind-key -T copy-mode-vi C-f send-keys -X page-down'
 
 # ページ送り
-bind-key -T copy-mode-vi C-u send-keys -X scroll-up
-bind-key -T copy-mode-vi C-d send-keys -X scroll-down
+if "[[ (( $(tmux -V | cut -c 6-) < 2.4 )) ]]" \
+    'bind-key -t vi-copy C-u scroll-up'  \
+    'bind-key -t vi-copy C-d scroll-down'
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'bind-key -T copy-mode-vi C-u send-keys -X scroll-up'  \
+    'bind-key -T copy-mode-vi C-d send-keys -X scroll-down'
 
 
 ######################################################################
@@ -192,8 +244,9 @@ bind-key -n C-o select-pane -t :.+
 # マウス操作
 ######################################################################
 setw -g mouse on
-set -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+if "[[ (( $(tmux -V | cut -c 6-) >= 2.4 )) ]]" \
+    'set -g mode-mouse on' \
+    'set -g mouse-select-pane on' \
+    'set -g mouse-resize-pane on' \
+    'set -g mouse-select-window on'
 bind-key -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
