--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,7 +14,7 @@ set -g status-left '#H:[#P]'
 
 # 右パネルを設定する
 # Wi-Fi、バッテリー残量、現在時刻（最右に表示）
-set -g status-right '#(bin/battery.sh --tmux) [%Y-%m-%d(%a) %H:%M]'
+# set -g status-right '#(bin/battery.sh --tmux) [%Y-%m-%d(%a) %H:%M]'
 # (getwifi.sh)
 
 # ステータスバーを Utf-8 に対応
@@ -219,3 +219,40 @@ if "[[ $(tmux -V | cut -c 6-) >= 2.4 ]]" 'set -g mouse-select-pane on'
 if "[[ $(tmux -V | cut -c 6-) >= 2.4 ]]" 'set -g mouse-resize-pane on'
 if "[[ $(tmux -V | cut -c 6-) >= 2.4 ]]" 'set -g mouse-select-window on'
 bind-key -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
+
+
+######################################################################
+# Plugins
+# reference: https://gist.github.com/andrenbrandao/701dc935b45666791183eb0948921bb7
+######################################################################
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Config Dracula Theme
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-powerline true
+set -g @dracula-show-network false
+set -g @dracula-show-left-icon session
+set -g @dracula-cpu-usage true
+set -g @dracula-ram-usage true
+set -g @dracula-day-month true
+set -g @dracula-military-time true
+set -g @dracula-show-flags true
+
+# Set 256 colors
+set -s default-terminal 'tmux-256color'
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
