--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -247,7 +247,7 @@ set -g @dracula-show-flags true
 set -s default-terminal 'tmux-256color'
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ~/.tmux.conf
+bind r source-file ${HOME}/.tmux.conf
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -255,4 +255,4 @@ bind r source-file ~/.tmux.conf
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '${HOME}/.tmux/plugins/tpm/tpm'
