--- a/tmux/Makefile
+++ b/tmux/Makefile
@@ -1,6 +1,6 @@
 .PHONY: init
 init:
-	ln -sf .tmux.conf ${HOME}/.tmux.conf
+	ln -sf ${PWD}/.tmux.conf ${HOME}/.tmux.conf
 	git clone https://github.com/tmux-plugins/tpm ${HOME}/.tmux/plugins/tpm
 	git clone https://github.com/tmux-plugins/tmux-sensible ${HOME}/.tmux/plugins/tmux-sensible
 	git clone https://github.com/dracula/tmux ${HOME}/.tmux/plugins/tmux
@@ -10,4 +10,4 @@ init:
 .PHONY: clean
 clean:
 	unlink ${HOME}/.tmux.conf || true && \
-	rm -rf ${HOME}/.tmux/ || true
+	rm -rf ${HOME}/.tmux || true
