--- a/vim/Makefile
+++ b/vim/Makefile
@@ -1,11 +1,11 @@
 .PHONY: init
 init:
-	ln -sf .vimrc ${HOME}/.vimrc
+	ln -sf ${PWD}/.vimrc ${HOME}/.vimrc
 	mkdir -p ${HOME}/.vim/colors
 	mkdir -p ${HOME}/.vim/backup
 	git clone https://github.com/altercation/vim-colors-solarized
-	mv vim-colors-solarized/colors/solarized.vim ${HOME}/.vim/colors/
-	rm -rf vim-colors-solarized
+	mv ${PWD}/vim-colors-solarized/colors/solarized.vim ${HOME}/.vim/colors/
+	rm -rf ${PWD}/vim-colors-solarized
 
 .PHONY: clean
 clean:
